Added more project setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Xaba App</string>
+    <string name="app_name">Xaba</string>
     <string name="i_am">I\'m a</string>
     <string name="and_i_want_to">and I want to</string>
     <string name="register">Register</string>
