--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="i_am">I\'m a</string>
     <string name="and_i_want_to">and I want to</string>
     <string name="register">Register</string>
-    <string name="log_in">Log in</string>
+    <string name="login">Login</string>
     <string name="get_an_account">Get an account</string>
     <string name="with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard">With our
         easy process it only takes a couple of minutes to get onboard.
@@ -18,7 +18,7 @@
     <string name="title">Title</string>
     <string name="national_id">National ID:</string>
     <string name="pin_code">PIN Code:</string>
-    <string name="forgot_pin">Forgot PIN?</string>
+    <string name="forgot_pin"><u>Forgot PIN?</u></string>
     <string name="phone_number">Phone Number</string>
     <string name="send_new_pin">Send new PIN</string>
     <string name="confirm_national_id">Confirm National ID</string>
@@ -56,4 +56,5 @@
     </string>
     <string name="do_you_remember_it"><u>Do you remember it?</u></string>
     <string name="building_connections">Building Connections</string>
+    <string name="visit_xaba">Visit www.xaba.org</string>
 </resources>
