init edit profile and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="next">Next</string>
     <string name="login_in">Log in</string>
     <string name="refer_someone_to_get_rewards">Refer someone to get rewards</string>
-    <string
-        name="with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions">
+    <string name="with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions">
         With each referral you get extra money and you also get credits for their actions.
     </string>
     <string name="title">Title</string>
