--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
         easy process it only takes a couple of minutes to get onboard.
     </string>
     <string name="next">Next</string>
-    <string name="login_in">Log in</string>
+    <string name="login_in"><u>Log In</u></string>
     <string name="refer_someone_to_get_rewards">Refer someone to get rewards</string>
     <string
         name="with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions">
@@ -36,13 +36,6 @@
     <string name="register_another_worker"><u>Register another worker</u></string>
     <string name="your_referral_id_is">Your referral ID is:&#160;</string>
     <string name="add_another_profession"><u>Add another profession</u></string>
-    <string name="register_another_worker">
-        <u>Register another worker</u>
-    </string>
-    <string name="your_referral_id_is">Your referral ID is:</string>
-    <string name="add_another_profession">
-        <u>Add another profession</u>
-    </string>
     <string name="country">Country</string>
     <string name="select_country">Select Country</string>
     <string name="language">Language</string>
@@ -116,5 +109,10 @@
     </string>
     <string name="want_some_extra_cash_become_an_agent_and_register_workers_onto_xaba">Want some
         extra cash? Become an agent and register workers onto Xaba.
+    </string>
+    <string
+        name="we_have_sent_an_activation_code_to_your_contact_number_please_enter_the_provided_code_to_verify_your_account">
+        We have sent an activation code to your contact number. Please enter the provided code to
+        verify your account.
     </string>
 </resources>
