--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,7 @@
     <string name="enter_activation_code">Enter Activation Code.</string>
     <string name="new_activation_code_is_sent_via_sms">New Actiovation code is sent via SMS.
     </string>
+    <string name="choose_country">Choose Country.</string>
+    <string name="choose_language">Choose Language.</string>
+    <string name="referral_code_should_be_a_number">Referral Code should be a number.</string>
 </resources>
