--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="choose_country">Choose Country.</string>
     <string name="choose_language">Choose Language.</string>
     <string name="referral_code_should_be_a_number">Referral Code should be a number.</string>
+    <string name="worker_is_registered">Worker is registered.</string>
 </resources>
