--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="enter_national_id">Enter National ID</string>
     <string name="national_id_should_be_a_number">National ID should be a number.</string>
     <string name="something_is_wrong">Something is wrong.</string>
+    <string name="check_your_internet_connection">Check your internet connection.</string>
     <string name="your_national_id_is_wrong">Your National ID is wrong.</string>
     <string name="please_enter_your_national_id_and_pin_to_login">Please enter your national ID and
         PIN to login.
