--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="choose_language">Choose Language.</string>
     <string name="referral_code_should_be_a_number">Referral Code should be a number.</string>
     <string name="worker_is_registered">Worker is registered.</string>
+    <string name="your_phone_number_should_look_like">Your phone number should look like: +2547XXXXXXXX</string>
 </resources>
