add order of choose dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,10 @@
         With each referral you get extra money and you also get credits for their actions.
     </string>
     <string name="title">Title</string>
-    <string name="national_id">National ID:&#160;</string>
-    <string name="pin_code">PIN Code:</string>
+    <string name="national_id">National ID</string>
+    <string name="national_id_colon">National ID:&#160;</string>
+    <string name="pin_code">PIN Code</string>
+    <string name="pin_code_colon">PIN Code:</string>
     <string name="forgot_pin">
         <u>Forgot PIN?</u>
     </string>
