--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,13 @@
     <string name="referral_code_should_be_a_number">Referral Code should be a number.</string>
     <string name="worker_is_registered">Worker is registered.</string>
     <string name="your_phone_number_should_look_like">Your phone number should look like: +2547XXXXXXXX</string>
+
+    <!--Change Pin Screen-->
+    <string name="change_your_pin">Change your PIN</string>
+    <string name="old_pin">Old PIN</string>
+    <string name="new_pin">New PIN</string>
+    <string name="change_pin_not_underline">Change PIN</string>
+    <string name="retype_pin">Retype PIN</string>
+    <string name="fields_not_empty">Fields should not be empty</string>
+    <string name="new_pint_retype_should_match">New pin and retype PIN should match</string>
 </resources>
