--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,22 +143,22 @@
     <string name="pin_code_and_confirm_pin_code_should_be_the_same">PIN code and Confirm PIN code
         should be the same.
     </string>
-    <string name="enter_referral_code">Enter referral code.</string>
-    <string name="enter_confirm_national_id">Enter Confirm National ID.</string>
-    <string name="enter_confirm_pin_code">Enter Confirm PIN code.</string>
-    <string name="choose_industry_first">Choose Industry first.</string>
-    <string name="choose_category_first">Choose Category first.</string>
-    <string name="choose_county_first">Choose County first.</string>
-    <string name="choose_county">Choose County.</string>
+    <string name="enter_referral_code">Enter referral code</string>
+    <string name="enter_confirm_national_id">Enter Confirm National ID</string>
+    <string name="enter_confirm_pin_code">Enter Confirm PIN code</string>
+    <string name="choose_industry_first">Choose Industry first</string>
+    <string name="choose_category_first">Choose Category first</string>
+    <string name="choose_county_first">Choose County first</string>
+    <string name="choose_county">Choose County</string>
     <string name="choose_sub_county">Choose Sub-County</string>
-    <string name="choose_industry">Choose Industry.</string>
-    <string name="choose_category">Choose Category.</string>
-    <string name="choose_profession">Choose Profession.</string>
-    <string name="enter_activation_code">Enter Activation Code.</string>
+    <string name="choose_industry">Choose Industry</string>
+    <string name="choose_category">Choose Category</string>
+    <string name="choose_profession">Choose Profession</string>
+    <string name="enter_activation_code">Enter Activation Code</string>
     <string name="new_activation_code_is_sent_via_sms">New Actiovation code is sent via SMS.
     </string>
-    <string name="choose_country">Choose Country.</string>
-    <string name="choose_language">Choose Language.</string>
+    <string name="choose_country">Choose Country</string>
+    <string name="choose_language">Choose Language</string>
     <string name="referral_code_should_be_a_number">Referral Code should be a number.</string>
     <string name="worker_is_registered">Worker is registered.</string>
     <string name="your_phone_number_should_look_like">Your phone number should look like: +2547XXXXXXXX</string>
