--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="add_another_profession">
         <u>Add another profession</u>
     </string>
+    <string name="remove"><u>Remove</u></string>
     <string name="country">Country</string>
     <string name="select_country">Select Country</string>
     <string name="language">Language</string>
