init notification dialog strings and selections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,4 +182,13 @@
     <string name="email">Email</string>
     <string name="message">Message</string>
     <string name="send">Send</string>
+
+    <!--Notifications Screen-->
+    <string name="all_notifications">All Notifications</string>
+    <string name="payout_done">Payout Done</string>
+    <string name="validated_registration">Validated Registration</string>
+    <string name="apply">Apply</string>
+
+
+
 </resources>
