--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard">With our
         easy process it only takes a couple of minutes to get onboard.
     </string>
+    <string name="get_connected_and_join_the_movement_simply_click">Get connected and join the movement. Simply click</string>
+    <string name="refer_friends_to_xaba_and_get_rewarded_or_become_a_xaba_agent_and_register_workers_for_extra_cash">Refer friends to Xaba and get rewarded or become a Xaba Agent, and register workers for extra cash</string>
     <string name="next">Next</string>
     <string name="refer_someone_to_get_rewards">Refer someone to get rewards</string>
     <string name="with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions">
