--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <!--My Profile-->
     <string name="change_pin"><u>Change PIN</u></string>
     <string name="edit_profile">Edit Profile</string>
-    <string name="delete_account"><u>Delete Account</u></string>
+    <string name="deactivate_account"><u>Deactivate Account</u></string>
     <string name="industry_dot">Industry:&#160;</string>
     <string name="category_dot">Category&#160;</string>
     <string name="profession_dot">Profession:&#160;</string>
@@ -120,9 +120,9 @@
     <string name="save">Save</string>
 
     <!--Delete account dialog-->
-    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
+    <string name="are_you_sure_you_want_to_deactivate_your_account">Are you sure you want to deactivate your account?</string>
     <string name="cancel">Cancel</string>
-    <string name="delete">Delete</string>
+    <string name="deactivate">Deactivate</string>
 
     <string name="we_have_made_it_easier_for_you_to_register">We\'ve made it easier for you to
         register.
