--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,5 +212,7 @@
     <string name="rejected">Rejected</string>
     <string name="invalid_data">Invalid data</string>
     <string name="total_registered_workers">Total registered workers:</string>
+    <string name="session_has_expired">Your session has expired. Please, login again.</string>
+    <string name="account_deactivated_success">Your account was successfully deactivated. Login again for reactivation.</string>
 
 </resources>
