Professions and categories fixes on edit profile.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="profession_dot">Profession:&#160;</string>
     <string name="phone">Phone:</string>
     <string name="genre">Genre:</string>
+    <string name="gender">Gender:</string>
     <string name="county_profile">County:</string>
     <string name="sub_county_profile">Sub-County:</string>
 
