Implemented edit phone number at edit profile screen. Updated the SMS parsing implementation for multiple languages support. SMS UI tests added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,6 +221,9 @@
     <string name="commissions">Commissions</string>
     <string name="filters">Filters</string>
 
+    <!--Validation by SMS-->
+    <string name="verification_code">Verification code</string>
+
     <!--Commission log filter-->
     <string name="date">Date</string>
     <string name="type">Type</string>
